<resources>
    <string name="app_name">CMR App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_referrals">Referrals Activity</string>
    <string name="receiving_a_survivor">Receiving a Survivor</string>
    <string name="medication">Medication</string>
    <string name="forms">Forms</string>
    <string name="coverage">Coverage</string>
    <string name="legal">Legal</string>
    <string name="references">References</string>
    <string name="referrals">Referrals</string>
    <string name="resources">Resources</string>
    <string name="about">About</string>
    <string name="title_activity_about">About Activity</string>
    <string name="arabic_button_label">العربية</string>
    <string name="english_button_label">English</string>
    <string name="clinical_manage_title">Clinical Management of Rape</string>

    <string name="preference_lang_key">AppLang</string>


</resources>
