<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_white"
    tools:context=".LanguageActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/about_title_id"
            android:layout_width="178dp"
            android:layout_height="95dp"
            android:layout_marginTop="50dp"
            android:text="@string/clinical_manage_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


            <Button
                android:id="@+id/button_arabic_id"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorUnicef"
                android:text="@string/arabic_button_label"
                android:onClick="arabicButtonTapped"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_title_id" />

            <Button
                android:id="@+id/button_english_id"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorUnicef"
                android:text="@string/english_button_label"
                android:onClick="englishButtonTapped"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_arabic_id" />


        <TextView
            android:id="@+id/resourcepack_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resource Pack"
            android:textColor="@color/colorUnicef"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_english_id" />

        <TextView
            android:id="@+id/version_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver. 0.9.4"
            android:textColor="@color/colorUnicef"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resourcepack_id" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>